# radar-and-sensing-technologies

./: .gitignore  Dockerfile  README.md  entrypoint.sh  launch_docker.sh  pyproject.toml
doc/0.raw_scripts/: 1.selectImages.py  2.opt-spectral-filtering.py  3.opt-cloud-detection.py  4.opt-sesonal-composite.py  5.cloudRestore.py  6.svm_opt_train_glcm_final.py  7.svm_svm_opt_classify_final.py
doc/resources/: code_trash.py
notebook/: 1.masks_refinement.ipynb  3.cloud_restoration.ipynb  4.generate_features.ipynb  5.generate_dataset.ipynb  6.SVM.ipynb  7.generate_lc_maps.ipynb  download_s2_products.ipynb  evaluate_methods.ipynb
notebook/venv_for_notebooks/: create_venv.sh  create_venv_requirements.txt
previous_pipeline/: Dockerfile  entrypoint.sh  launch_docker.sh  pyproject.toml
previous_pipeline/config_files/: 1.select-images.yaml  2.opt-spectral-filtering.yaml  3.opt-cloud-detection.yaml  4.opt-seasonal-composite.yaml  5.cloudRestore.yaml  6.svm_opt_train_glcm_final.yaml
previous_pipeline/src/: 1.selectImages.py  2.opt-spectral-filtering.py  3.opt-cloud-detection.py  4.opt-sesonal-composite.py  5.cloudRestore.py  6.svm_opt_train_glcm_final.py  7.svm_svm_opt_classify_final.py  tif_sanity_check.py  utility.py
scripts/: cloud_restoration.py  generate_dataset.py  generate_features.py  generate_lc_map.py  masks_refinement.py  svm_pipeline.py
scripts/config_files/: 1.masks_refinement.yaml  3.cloud_restoration.yaml  4.generate_features.yaml  5.generate_dataset.yaml  6.svm_pipeline.yaml  7.generate_lc_map.yaml
scripts/rs_queue/: 1.masks_refinement.sh  3.cloud_restoration.sh  4.generate_features.sh  5.generate_dataset.sh  6.svm_pipeline.sh  7.generate_lc_map.sh
src/generate_dataset/: __init__.py  _dataset_inspection.py  _generate_dataset_scripts.py  _generate_dataset_utils.py
src/generate_features/: __init__.py  _features_library.py  _generate_features_scripts.py  _generate_features_utils.py
src/generate_lc_map/: __init__.py  _generate_lc_map_scripts.py  _generate_lc_map_utils.py
src/process_composites/: __init__.py  _cloud_restoration_scripts.py  _cloud_restoration_utils.py
src/process_masks/: __init__.py  _masks_refinement_scripts.py  _masks_refinement_utils.py
src/scripting/: __init__.py  _output_presentation.py  _process_LC_points.py  _process_S2_products.py  _process_composites.py  _process_dems.py  _process_features.py  _process_training_points.py  _scripting.py  _utils.py
src/svm_pipeline/: __init__.py  _features_preprocessing.py  _features_selection.py  (+6 more)
